--- a/README.rdoc
+++ b/README.rdoc
@@ -16,12 +16,13 @@ Copyright 2010 Grant Rodgers. See included LICENSE file.
 
 Instantiate a client:
 
-  client = ElasticSearch.new('127.0.0.1:9160')
+  client = ElasticSearch.new('127.0.0.1:9200', :index => "twitter", :type => "tweet")
 
-  API is subject to change, but here is a trivial example:
+API is subject to change, but here is a trivial example:
 
-  client.index("twitter", "tweets", "1", {:body => "elasticsearch is cool"})
-  client.get("twitter, "tweets", "1")
+  client.index({:body => "elasticsearch is cool"}, :id => 1)
+  client.get("1")
+  client.search("body:elasticsearch")
 
 == TODO
 
