add build status to readme
[ci skip]

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,11 +1,12 @@
 
 = RubberBand
+[![Build Status](https://secure.travis-ci.org/grantr/rubberband.png?branch=master)](http://travis-ci.org/grantr/rubberband)
 
 An ElasticSearch client with ThriftClient-like failover handling.
 
 == License
 
-Copyright 2010-2011 Grant Rodgers. See included LICENSE file.
+Copyright 2010-2012 Grant Rodgers. See included LICENSE file.
 
 == Features
 
